# archimedes

./: Cargo.toml
src/: dataflow.rs  frontend.rs  lib.rs  lsp.rs  main.rs  parser.rs  span.rs  types.rs  utils.rs
src/backend/: dataflow.rs  mod.rs  types.rs
src/frontend/: dataflow.rs  diagnostics.rs  logic.rs  mod.rs  parser.rs  span.rs  types.rs
tree-sitter-fulcrum/: Cargo.toml  grammar.js  package.json  tree-sitter.json
tree-sitter-fulcrum/bindings/rust/: build.rs  lib.rs
tree-sitter-fulcrum/examples/: full_chore_planner.ful  stress.ful  stuff.ful
tree-sitter-fulcrum/queries/: highlights.scm
tree-sitter-fulcrum/src/: grammar.json  node-types.json  parser.c
